# PhySioLoVe

./: .gitignore  README.md  app.py  config.py  main.py  pyproject.toml
data/: health_data.csv
docs/: AI_CONTEXT.md  API_test.md  codex.md
physiolog/: config.py  routes_api.py
scripts/: import_data.py
static/css/: main.css
static/js/: dashboard.js
templates/: base.html  coach.html  entry.html  index.html  overview.html  test.html  trends.html  visualizations.html
