[project]
name = "physiolove"
version = "0.1.0"
description = "Personal health tracking dashboard"
requires-python = ">=3.11"

dependencies = [
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.1.1",
    "pandas>=2.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=23.12.0",
]
